# MLops_2025_group8

./: .gitignore  README.md  cloudbuild.yaml  pyproject.toml  pytest.ini  requirements.txt  requirements_api.txt  requirements_frontend.txt  tasks.py
.dvc/: config
.github/workflows/: tests.yaml
configs/: config.yaml
configs/checkpoint/: mobilenet.yaml  resnet18.yaml  resnet34.yaml
configs/dataset/: Fruit.yaml  fruit_vegetable.yaml  mnist.yaml
configs/experiment/: api.yaml  exp1.yaml  test1.yaml
configs/hyperparams/: config1.yaml  config2.yaml
configs/model/: awesome_model.yaml  mobilenet_model.yaml  resnet_model.yaml
data/: processed.dvc
dockerfiles/: api.dockerfile  frontend.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
reports/: README.md
src/food_classification/: data.py  model.py  test.py  test_data.py  train.py
src/fruit_vegetable_classification/: __init__.py  api.py  data.py  frontend.py  generate_onnx.py  model.py  test.py  test_data.py  train.py
src/fruit_vegetable_classification/api/: api.py
tests/: __init__.py  test_data.py  test_model.py  test_train.py
tests/performance/: locustfile.py
tests/performancetests/: locustfile.py
