[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fruit_vegetable_classification"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Xinyi Liu", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
lint.select = ["D"]
lint.ignore = ["D417", "D203", "D213"]

[tool.coverage.run]
omit = ["tests/*"]
